# crewai_tavily_tool_demo

./: README.md  pyproject.toml
src/crewai_tavily_tool_demo/: crew.py  main.py
src/crewai_tavily_tool_demo/config/: agents.yaml  tasks.yaml
src/crewai_tavily_tool_demo/tools/: tavily_search.py
