[tool.poetry]
name = "crewai_tavily_tool_demo"
version = "0.1.0"
description = "crewai-tavily-tool-demo using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = ">=0.61.0,<1.0.0" }
tavily-python = "^0.5.0"


[tool.poetry.scripts]
crewai_tavily_tool_demo = "crewai_tavily_tool_demo.main:run"
run_crew = "crewai_tavily_tool_demo.main:run"
train = "crewai_tavily_tool_demo.main:train"
replay = "crewai_tavily_tool_demo.main:replay"
test = "crewai_tavily_tool_demo.main:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
